More fixes. Try headless: false

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/123joshuawu/spartacus_auto_claim_stake#readme",
   "dependencies": {
     "@chainsafe/dappeteer": "^2.2.0",
-    "puppeteer": "^11.0.0",
+    "dotenv": "^10.0.0",
     "puppeteer-screen-recorder": "^2.0.2"
   }
 }
