--- a/.github/workflows/spa_auto_claim_stake.yaml
+++ b/.github/workflows/spa_auto_claim_stake.yaml
@@ -15,18 +15,20 @@ jobs:
       - uses: actions/checkout@v2
 
       - uses: actions/setup-node@v2
+        env:
+          PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: "true"
         with:
-          node-version: "16"
+          args: install
+          node-version: "14"
           cache: "npm"
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run workflow
-        run: node index.js
+      - uses: mujo-code/puppeteer-headful@v2
         env:
           PASSWORD: ${{ secrets.PASSWORD }}
           SEED: ${{ secrets.SEED }}
+          CI: "true"
+        with:
+          args: node index.js
 
       - uses: actions/upload-artifact@v2
         if: always()
