--- a/.github/workflows/spa_auto_claim_stake.yaml
+++ b/.github/workflows/spa_auto_claim_stake.yaml
@@ -1,8 +1,8 @@
 name: SPA Auto Claim and Stake
 
 on:
-  # schedule:
-  #   - cron: "*/5 * * * *"
+  schedule:
+    - cron: "*/5 * * * *"
   workflow_dispatch:
 
 jobs:
@@ -36,3 +36,5 @@ jobs:
         with:
           name: recording
           path: recording.mp4
+
+      - run: cat status.json
